# jarvix

./: .env.example  .gitignore  README.md  install.bat  install.ps1  pyproject.toml  run_silent.vbs  setup.bat  start_jarvix.bat  stop_jarvix.bat  test_gmail_features.py
browser_extension/: background.js  manifest.json  popup.html  popup.js
docs/: API.md  ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  CONTRIBUTING.md  EXTENSIONS.md  FEATURES.md  INSTALLATION.md  README.md  SECURITY.md  TROUBLESHOOTING.md
firefox_extension/: background.js  manifest.json
scripts/: test_browser_flows.py
src/jarvix/: main.py
src/jarvix/agents/: browser_agent.py  system.py  telegram.py
src/jarvix/core/: action_executor.py  brain.py  browser_host.py  command_router.py  goal_planner.py  keyword_matcher.py  state_manager.py  voice.py
src/jarvix/features/: clipboard.py  focus_mode.py  gmail.py  user_profile.py  web_automation.py
src/jarvix_linux/: main.py
src/jarvix_linux/agents/: system.py  telegram.py
src/jarvix_linux/core/: brain.py  native_manifest.json
src/jarvix_linux/features/: activity.py  browser_control.py
src/jarvix_linux/features/files/: finder.py  tracker.py
src/jarvix_linux/scripts/: register_native_host.py
